[project]
name = "custom-node-color"
description = "A modern GUI-based color picker for ComfyUI nodes and groups. Features visual spectrum, HEX/RGB inputs, eyedropper tool, and favorite colors support."
version = "1.2.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]


[project.urls]
Repository = "https://github.com/lovelybbq/comfyui-custom-node-color"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/lovelybbq/comfyui-custom-node-color/wiki"
"Bug Tracker" = "https://github.com/lovelybbq/comfyui-custom-node-color/issues"

[tool.comfy]
PublisherId = "lovelybbq"
DisplayName = "comfyui-custom-node-color"
Icon = "https://raw.githubusercontent.com/lovelybbq/comfyui-custom-node-color/main/icon/icon.png"
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

